--- a/documentation.yml
+++ b/documentation.yml
@@ -19,7 +19,9 @@ toc:
   - Transform
   - name: 2D Shape Primitives
     file: ./docs/api/tutorials/draw/draw.md
+  - OBJ_GenericGL
   - OBJ_Generic
+  - OBJ_FigurePrimitive
   - OBJ_Line
   - OBJ_Polyline
   - OBJ_Arrow
@@ -214,6 +216,7 @@ toc:
   - FigureElement#setTransform
   - OBJ_ElementPropertyMod
   - OBJ_ElementMods
+  - TypeScenarios
   - name: Misc Geometry
   - TypeParsablePoint
   - TypeParsableLine
@@ -299,6 +302,10 @@ toc:
   - OBJ_LineMove
   - TypeHAlign
   - TypeVAlign
+  - OBJ_GLColorData
+  - OBJ_Generic3DAll
+  - OBJ_VertexShader
+  - OBJ_FragmentShader
   - name: Misc Animation
   - AnimationStep
   - ElementAnimationStep
@@ -369,3 +376,68 @@ toc:
   #         # - TypeParsableRect
   #         # - getRect
   #         - TypeF1DefRect
+
+
+OBJ_GEOPolygon
+OBJ_GEOPolygonLine
+polygon
+polygonLine
+OBJ_ConePoints
+cone
+OBJ_CubePoints
+cube
+OBJ_CylinderPoints
+OBJ_RevolvePoints
+revolve
+OBJ_SpherePoints
+sphere
+surface
+normAngle
+TypeRotationDirection
+getDeltaAngle
+getDeltaAngle3D
+OBJ_LineIntersect
+constructor
+theta
+phi
+setP1
+setP2
+unitVector
+vector
+getPoint
+reverse
+angle
+round
+length
+midPoint
+pointAtPercent
+pointAtLength
+hasPointAlong
+hasPointOn
+distanceToPoint
+isEqualTo
+hasLineWithin
+isAlongLine
+isWithinLine
+offset
+offset2D
+distanceToLine
+pointProjection
+intersectsWith
+clipPoint
+Path
+getPlane
+Plane ▸
+isParsablePoint
+TypeBasisObjectDefinition
+TypeRotationComponentName
+TypeUserRotationDefinition
+TypeUserTranslationDefinition
+TypeUserScaleDefinition
+TypeUserCustomDefinition
+TypeUserBasisDefinition
+TypeTransformComponentType
+TypeScaleTransformComponent
+TypeParsableArrayTransform
+fourByFour
+tester
