--- a/documentation.yml
+++ b/documentation.yml
@@ -373,7 +373,7 @@ toc:
   - TypeF1DefLineBounds
   - LineBounds
   - getBounds
-  - OBJ_Surface
+  - OBJ_SurfaceGrid
   - surfaceGrid
   - name: Misc Geometry Creation
   - OBJ_PolygonPoints
