--- a/documentation.yml
+++ b/documentation.yml
@@ -63,6 +63,10 @@ toc:
   - COL_Polyline
   - CollectionsRectangle
   - COL_Rectangle
+  - COL_Toggle
+  - CollectionsToggle
+  - COL_Slider
+  - CollectionsSlider
   - CollectionsAxis
   - COL_Axis
   - CollectionsPlot
