--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "browser": "./browser.sh",
     "webpack": "webpack",
     "flow": "flow",
+    "tsc": "tsc --noEmit",
     "jest": "jest",
     "jest-perf": "jest --runInBand --config jest.perf.config.js",
     "jest-perf-debug": "node --inspect-brk=0.0.0.0 node_modules/.bin/jest --runInBand --config jest.perf.config.js",
@@ -37,6 +38,7 @@
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-flow": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.27.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^27.2.1",
