--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "webpack": "^5.58.2",
     "webpack-cli": "^4.8.0",
     "whatwg-fetch": "^3.6.2",
-    "worker-loader": "^3.0.8"
+    "worker-loader": "^3.0.8",
+    "typescript": "^5.4.2"
   },
   "devDependenciesComments": {
     "worker-loader": "Do not upgrade to 3.0.0 as the publicPath options seems to be broken. This means instead of workers being searched for at /static/workers, they are searched for at the location of the file calling them"
