--- a/containers/figureone/Dockerfile
+++ b/containers/figureone/Dockerfile
@@ -1,26 +1,29 @@
 # Development environment for FigureOne:
-FROM airladon/pynode:python3.9.5-node16.10.0-npm7.24.1
+FROM node:20-bookworm
 
 # ## General ##
 WORKDIR /opt/app
 
+# Install Python, Docker, and other dependencies
 RUN apt-get update && \
-	   apt-get -y install apt-transport-https \
-     ca-certificates \
-     curl \
-     gnupg2 \
-     software-properties-common && \
- 		 curl -fsSL https://download.docker.com/linux/$(. /etc/os-release; echo "$ID")/gpg > /tmp/dkey; apt-key add /tmp/dkey && \
-	 	 add-apt-repository \
-   	 "deb [arch=amd64] https://download.docker.com/linux/$(. /etc/os-release; echo "$ID") \
-   	 $(lsb_release -cs) \
-   	 stable" && \
- 		 apt-get update && \
- 		 apt-get -y install docker-ce
-
-# Needed for flow it seems (try removing in the future)
-RUN apt-get update && apt-get install -y libatomic1
-
+    apt-get -y install \
+      python3 \
+      python3-pip \
+      apt-transport-https \
+      ca-certificates \
+      curl \
+      gnupg2 \
+      software-properties-common \
+      libatomic1 && \
+    install -m 0755 -d /etc/apt/keyrings && \
+    curl -fsSL https://download.docker.com/linux/debian/gpg -o /etc/apt/keyrings/docker.asc && \
+    chmod a+r /etc/apt/keyrings/docker.asc && \
+    echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/debian \
+      $(. /etc/os-release && echo "$VERSION_CODENAME") stable" > /etc/apt/sources.list.d/docker.list && \
+    apt-get update && \
+    apt-get -y install docker-ce && \
+    ln -sf /usr/bin/python3 /usr/bin/python && \
+    rm -rf /var/lib/apt/lists/*
 
 # Install npm packages
 ADD package.json .
