--- a/package.json
+++ b/package.json
@@ -4,6 +4,19 @@
   "description": "Draw, animate and interact with shapes, text, plots and equations in Javascript. Create interactive slide shows, and interactive videos.",
   "main": "index.js",
   "types": "types/index.d.ts",
+  "unpkg": "figureone.min.js",
+  "jsdelivr": "figureone.min.js",
+  "exports": {
+    ".": {
+      "types": "./types/index.d.ts",
+      "default": "./index.js"
+    }
+  },
+  "files": [
+    "index.js",
+    "figureone.min.js",
+    "types/"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/airladon/figureone.git"
@@ -13,13 +26,11 @@
     "webpack": "webpack",
     "build:types": "tsc --project tsconfig.build.json",
     "build": "webpack && npm run build:types",
-    "flow": "flow",
     "tsc": "tsc --noEmit",
     "jest": "jest",
     "jest-perf": "jest --runInBand --config jest.perf.config.js",
     "jest-perf-debug": "node --inspect-brk=0.0.0.0 node_modules/.bin/jest --runInBand --config jest.perf.config.js",
     "lint": "eslint src",
-    "flowcopysource": "flow-copy-source src package",
     "jest-debug": "node --inspect-brk=0.0.0.0 node_modules/.bin/jest --runInBand",
     "docs:typedoc": "bash generate_docs_typedoc.sh"
   },
@@ -40,7 +51,6 @@
     "@babel/core": "^7.26.0",
     "@babel/polyfill": "^7.10.4",
     "@babel/preset-env": "^7.26.0",
-    "@babel/preset-flow": "^7.14.5",
     "@babel/preset-react": "^7.26.0",
     "@babel/preset-typescript": "^7.27.1",
     "babel-core": "^7.0.0-bridge.0",
@@ -51,12 +61,9 @@
     "documentation": "^12.3.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-flowtype": "^6.1.0",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-jest": "^24.4.2",
     "eslint-plugin-react": "^7.26.0",
-    "flow-bin": "^0.131.0",
-    "flow-copy-source": "^2.0.9",
     "http-server": "^13.0.2",
     "jest": "^27.2.1",
     "regenerator-runtime": "^0.13.9",
