--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,5 @@
 {
     "extends": ["plugin:jest/recommended",
-                "plugin:react/recommended",
                 "airbnb-base"],
     "rules": {
         "no-console": "error",
@@ -69,29 +68,21 @@
           {
             "ignoreEOLComments": true
           }
-        ]
+        ],
+        "import/extensions": ["error", "ignorePackages", {
+          "js": "never",
+          "ts": "never"
+        }]
       },
     "plugins": [
-      "jest",
-      "react"],
+      "jest"],
 
     "settings": {
       "import/resolver": {
         "node": {
-          "extensions": [".js",".jsx"]
+          "extensions": [".js",".ts"]
         }
-      },
-      "react": {
-        "createClass": "createReactClass", // Regex for Component Factory to use,
-                                           // default to "createReactClass"
-        "pragma": "React",  // Pragma to use, default to "React"
-        "version": "16.2", // React version, default to the latest React stable release
-        "flowVersion": "0.67.1" // Flow version
-      },
-      "propWrapperFunctions": [ "forbidExtraProps" ] // The names of any functions used to wrap the
-                                                     // propTypes object, e.g. `forbidExtraProps`.
-                                                     // If this isn't set, any propTypes wrapped in
-                                                     // a function will be skipped.
+      }
     },
 
     "env": {
