--- a/containers/playwright/package.json
+++ b/containers/playwright/package.json
@@ -7,7 +7,7 @@
     "lib": "lib"
   },
   "scripts": {
-    "jest": "jest --runInBand",
+    "test": "npx playwright test",
     "http-server": "node_modules/http-server/bin/http-server --cors='*' &",
     "http-server-quiet": "node_modules/http-server/bin/http-server --cors='*' -s &"
   },
@@ -16,10 +16,7 @@
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
-    "jest": "^29.7.0",
-    "jest-image-snapshot": "^6.5.1",
-    "jest-playwright-preset": "^4.0.0",
-    "playwright": "^1.58.2",
+    "@playwright/test": "^1.58.2",
     "http-server": "^14.1.1"
   }
 }
